@@ -64,6 +64,8 @@ type FloodTest struct {
 	UseTls               bool                         `toml:"use_tls"`
 	Tls                  tcp.TlsConfig                `toml:"tls"`
 	MaxMessageSize       uint32                       `toml:"max_message_size"`
+	ReconnectOnError     bool                         `toml:"reconnect_on_error"`
+	ReconnectInterval    int32                        `toml:"reconnect_interval"`
 	msgInterval          time.Duration
 }
 
@@ -270,6 +272,20 @@ func makeFixedMessage(encoder client.StreamEncoder, size uint64,
 	return ma
 }
 
+func createSender(test FloodTest)(sender *client.NetworkSender, err error) {
+	if test.UseTls {
+		var goTlsConfig *tls.Config
+		goTlsConfig, err = tcp.CreateGoTlsConfig(&test.Tls)
+		if err != nil {
+			return
+		}
+		sender, err = client.NewTlsSender(test.Sender, test.IpAddress, goTlsConfig)
+	} else {
+		sender, err = client.NewNetworkSender(test.Sender, test.IpAddress)
+	}
+	return
+}
+
 func sendMessage(sender client.Sender, buf []byte, corrupt bool) (err error) {
 	var b byte
 	var index int
@@ -330,22 +346,30 @@ func main() {
 	if test.MaxMessageSize > 0 {
 		message.SetMaxMessageSize(test.MaxMessageSize)
 	}
+	if test.ReconnectInterval < 1 {
+        	test.ReconnectInterval = 5
+	}
 
+	retryIntervalDuration := time.Duration(test.ReconnectInterval) * time.Second
 	var sender *client.NetworkSender
 	var err error
-	if test.UseTls {
-		var goTlsConfig *tls.Config
-		goTlsConfig, err = tcp.CreateGoTlsConfig(&test.Tls)
+
+	for {
+		sender, err = createSender(test)
 		if err != nil {
-			client.LogError.Fatalf("Error creating TLS config: %s\n", err)
+			client.LogError.Printf("Error creating sender: %s\n", err)
+			if test.ReconnectOnError {
+				client.LogInfo.Println("Attempting to reconnect...")
+				time.Sleep(retryIntervalDuration)
+				continue
+			} else {
+				return
+			}
+		} else {
+			break
 		}
-		sender, err = client.NewTlsSender(test.Sender, test.IpAddress, goTlsConfig)
-	} else {
-		sender, err = client.NewNetworkSender(test.Sender, test.IpAddress)
 	}
-	if err != nil {
-		client.LogError.Fatalf("Error creating sender: %s\n", err)
-	}
+
 
 	unsignedEncoder := client.NewProtobufEncoder(nil)
 	signedEncoder := client.NewProtobufEncoder(&test.Signer)
@@ -390,6 +414,7 @@ func main() {
 	test.SignedPercentage /= 100.0
 	test.OversizedPercentage /= 100.0
 
+
 	var buf []byte
 	for gotsigint := false; !gotsigint; {
 		runtime.Gosched()
@@ -423,6 +448,20 @@ func main() {
 		bytesSent += uint64(len(buf))
 		if err = sendMessage(sender, buf, corrupt); err != nil {
 			client.LogError.Printf("Error sending message: %s\n", err.Error())
+			if test.ReconnectOnError {
+				for {
+					client.LogInfo.Println("Attempting to reconnect...")
+					time.Sleep(retryIntervalDuration)
+					sender, err = createSender(test)
+					if err != nil {
+						client.LogError.Printf("Error creating sender: %s\n", err)
+					} else {
+						break
+					}
+				}
+			} else {
+				break
+			}
 		} else {
 			msgsDelivered++
 		}
